[project]
name = "job-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "fastapi>=0.115.12",
    "gymnasium>=1.1.1",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "stable-baselines3>=2.6.0",
    "streamlit>=1.44.1",
    "tensorboard>=2.19.0",
    "uvicorn>=0.34.0",
]
